--- a/src/App.css
+++ b/src/App.css
@@ -35,16 +35,21 @@
   padding: 4px 12px;
 }
 
-.flexbox-selection {
-  margin: 48px 36px;
-  padding: 36px;
-  border-radius: 8px;
-  border: 2px solid black;
+.selection-container {
+  margin: 12px 12px;
+  padding: 12px;
+  border-radius: 2px;
+  background-color: white;
 }
 
 .co-input-selection {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 12px;
-  max-width: 2px;
+}
+
+.co-input-selection label{
+  font-size: large;
 }
 
 .co-input-selection input {
@@ -69,4 +74,35 @@
   text-align: center;
   line-height: 120px;
   background-color: paleturquoise;
+}
+
+.layout-selection-container {
+  display: flex;
+  justify-content: center;
+}
+
+.layout-selection {
+  width: 50%;
+  text-align: center;
+  height: 48px;
+  line-height: 48px;
+  font-size: large;
+  font-weight: 400;
+  color: black;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2)
+}
+
+.layout-selected {
+  background-color: #efefef;
+  font-weight: 600;
+}
+
+.style-selection-container {
+  margin-top: 48px;
+}
+
+.style-selection-header {
+  font-size: large;
+  text-align: center;
+  margin-bottom: 12px;
 }
