--- a/src/App.css
+++ b/src/App.css
@@ -119,3 +119,18 @@ input {
   text-align: center;
 }
 
+.add-element-container {
+
+}
+
+.selection-button {
+  margin: 20px;
+  font-size: medium;
+  border: none;
+  box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 1px 3px 1px rgba(60,64,67,0.149);
+  border-radius: 20px;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
+
