--- a/src/css/styleSection.css
+++ b/src/css/styleSection.css
@@ -5,5 +5,15 @@
 }
 
 .style-selection-container {
-  margin-top: 12px;
+  margin: 12px;
+  padding: 6px 12px 12px 12px;
+  border-radius: 2px;
+  background-color: white;
+}
+
+.style-selection-header {
+  text-align: left;
+  font-size: small;
+  color: orange;
+  margin-bottom: 12px;
 }
