start on codebox

--- a/src/css/selection.css
+++ b/src/css/selection.css
@@ -23,9 +23,32 @@ input {
   width: 100px;
 }
 
-.layout-selection-container {
+.type-selection-container {
+  width: 100%;
   display: flex;
-  justify-content: center;
+}
+
+.type-selection {
+  flex-grow: 1;
+  cursor: pointer;
+  text-transform: capitalize;
+  text-align: center;
+  height: 48px;
+  line-height: 48px;
+  font-size: large;
+  font-weight: 400;
+  color: black;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2)
+}
+
+.type-selected {
+  background-color: #efefef;
+  font-weight: 600;
+}
+
+.layout-selection-container {
+  width: 100%;
+  display: flex;
 }
 
 .layout-selection {
