--- a/src/css/selectionDisplay.css
+++ b/src/css/selectionDisplay.css
@@ -1,14 +1,23 @@
 .co-mainPage {
   max-width: 400px;
-  padding: 100px;
   border-right: 8px solid #ebebeb;
-  overflow: auto;
+  overflow: hidden;
   width: 100%;
   flex: 1;
+  height: calc(100vh - 60px);
+  background-color: #ebebfe;
 }
 
 .elements-container {
-  display: flex;
-  justify-content: center;
+  z-index: 0;
 }
+
+.display-container {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  zoom: 2;
+}
+
+
 
