--- a/src/css/selectionPage.css
+++ b/src/css/selectionPage.css
@@ -2,4 +2,38 @@
   overflow: auto;
   background-color: #efefef;
   flex: 1;
+  height: calc(100vh - 60px);
+}
+
+.selection-container {
+  background-color: #efefef;
+  width: auto;
+  height: 100%;
+}
+
+.selection-topHalf {
+  height: 50%;
+  background-color: white;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+}
+
+.selection-bottomHalf {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  z-index: 100;
+}
+
+.selection-inputs {
+  border-right: 1px solid black;
+  height: 100%;
+  flex: 2;
+}
+
+.selection-inputs2 {
+  border-right: 1px solid black;
+  height: 100%;
+  flex: 1;
 }
